[tool.poetry]
name = "dvst"
version = "0.1.0"
description = "4DVST project for supinfo"
authors = ["Olivier NEVE"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
seaborn = "^0.13.2"
pandas = "^2.2.1"
adjusttext = "^1.1.1"
ipywidgets = "^8.1.2"
plotly = "^5.20.0"
numpy = "^1.26.4"
geopandas = "^0.14.3"
streamlit = "^1.32.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
